--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animated-number-react": "0.0.2",
+    "animejs": "^3.2.0",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-animated-number": "^0.4.4",
     "react-countup": "^4.3.3",
