--- a/package.json
+++ b/package.json
@@ -3,21 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/lab": "^4.0.0-alpha.53",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animated-number-react": "0.0.2",
     "animejs": "^3.2.0",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "http": "0.0.1-security",
     "moment": "^2.25.3",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.3",
     "react": "^16.13.1",
     "react-animated-number": "^0.4.4",
+    "react-bootstrap": "^1.0.1",
     "react-countup": "^4.3.3",
+    "react-datepicker": "^2.15.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
