--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.14",
     "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^3.2.10",
@@ -16,6 +18,7 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.13.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "moment": "^2.25.3",
