--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "date-fns": "^2.13.0",
+    "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "moment": "^2.25.3",
