--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "date-fns": "^2.13.0",
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
+    "gh-pages": "^3.0.0",
+    "homepage": "https://beyondsundae.github.io/dashboardcovid/",
     "http": "0.0.1-security",
     "moment": "^2.25.3",
     "mysql": "^2.18.1",
@@ -38,6 +40,7 @@
     "save": "^2.4.0"
   },
   "scripts": {
+    "deploy" : "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
