--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "react-datepicker": "^2.15.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-interactive": "^0.9.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
     "save": "^2.4.0"
   },
   "scripts": {
-    "deploy" : "npm run build&&gh-pages -d build",
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
