--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashboardcovid",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://beyondsundae.github.io/dashboardcovid/",
+  "homepage": "https://beyondsundae.github.io/dashboardcovid",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
