--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashboardcovid",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://beyondsundae.github.io/dashboardcovid/",
+"homepage": "https://beyondsundae.github.io/dashboardcovid",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
@@ -16,7 +16,7 @@
     "animejs": "^3.2.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "date-fns": "^2.13.0",
