--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "dashboardcovid",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
@@ -24,6 +23,7 @@
     "express": "^4.17.1",
     "gh-pages": "^3.0.0",
     "http": "0.0.1-security",
+    "mdbreact": "^4.27.0",
     "moment": "^2.25.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.3",
