--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dashboardcovid",
   "version": "0.1.0",
   "private": true,
+"homepage": "https://beyondsundae.github.io/dashboardcovid/",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
@@ -39,6 +40,10 @@
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
     "save": "^2.4.0"
+  },
+  "engines": {
+    "node": "12.14.1",
+    "npm": "6.13.4"
   },
   "scripts": {
     "deploy": "npm run build&&gh-pages -d build",
