--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "dashboardcovid",
   "version": "0.1.0",
   "private": true,
-"homepage": "https://beyondsundae.github.io/dashboardcovid/",
+  "homepage": "https://beyondsundae.github.io/dashboardcovid/",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
@@ -24,6 +25,7 @@
     "express": "^4.17.1",
     "gh-pages": "^3.0.0",
     "http": "0.0.1-security",
+    "material-table": "^1.63.1",
     "mdbreact": "^4.27.0",
     "moment": "^2.25.3",
     "mysql": "^2.18.1",
@@ -43,7 +45,7 @@
   },
   "engines": {
     "node": "12.14.1",
-    "npm": "6.13.4"
+    "npm": "6.14.5"
   },
   "scripts": {
     "deploy": "npm run build&&gh-pages -d build",
