--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "dashboardcovid",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://beyondsundae.github.io/dashboardcovid/",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
@@ -40,6 +39,7 @@
     "react-interactive": "^0.9.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.8.0",
     "recharts": "^1.8.5",
     "save": "^2.4.0"
   },
